# zzfvibecoding

./: .gitignore  LICENSE  vscode..reg
T/invest/01/: .env.example  .gitignore  DEVELOPMENT_DOC.md  README.md  package-lock.json  package.json  tsconfig.json
T/invest/02-win-query-tool/: .gitignore  (+5 more)
cpp/: .gitignore
cpp/async/: CMakeLists.txt  CMakePresets.json  README.md
cpp/async/src/: AsyncAwait.h  MainFrame.cpp  MainFrame.h  main.cpp
cpp/asyncjob/: AsyncJob.sln
cpp/command/: CommandPatternV141.sln
cpp/cpp_ui_sub_interact/: README.md  cpp_ui_sub_interact.sln  cpp_ui_sub_interact.vcxproj  cpp_ui_sub_interact.vcxproj.filters
cpp/cpp_ui_sub_interact_eventbus/: Events.h  MainFrame.cpp  MainFrame.h  README.md  UiEventBusApp.cpp  UiEventBusApp.h  cpp_ui_sub_interact_eventbus.sln  cpp_ui_sub_interact_eventbus.vcxproj  cpp_ui_sub_interact_eventbus.vcxproj.filters  main.cpp  pch.h  resource.h
cpp/cppasync/: AsyncDemo.sln  AsyncDemo.vcxproj  AsyncDemo.vcxproj.filters  CMakeLists.txt  README.md  async_demo.cpp  async_no_coro.cpp
cpp/cppv141async/: README.md  cppv141async.sln
cpp/eventbus/: eventbus.sln  eventbus.tests.vcxproj  eventbus.tests.vcxproj.filters  eventbus.vcxproj  eventbus.vcxproj.filters  packages.config
cpp/eventbus02/: CommandEventBus.h  EventBus.h  UiEventBus.h  eventbus02.vcxproj  eventbus02.vcxproj.filters  main.cpp
cpp/eventbus03/: UiEventBus.h  eventbus02.sln  eventbus02.vcxproj  eventbus02.vcxproj.filters  main.cpp
cpp/imagecontouringsimple/: CMakeLists.txt  CMakePresets.json  vcpkg.json
cpp/imagecontouringsimple/src/: main.cpp
cpp/statemachine/: Logger.h  README.md  StateMachine.cpp  StateMachine.h  StateMachineDemo.sln  StateMachineDemo.vcxproj  main.cpp
csharp/: .gitignore
csharp/grpc/: GrpcSample.sln  README.md
ex/: .gitignore  README.md  app.py  requirements.txt
func/cloudnote/: .gitignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
func/lisB/: .copilot-instructions.md  .gitignore  README.md  build-release.ps1  feature_awz3.md  feature_mobi.md  gradle.properties  settings.gradle.kts
func/listeenb/: .gitignore  README.md  build.gradle  feiqi.txt  gradle.properties  settings.gradle
g/che/: .gitignore  README.md  build.gradle.kts  build_apk.bat  gradlew  gradlew.bat  local.properties  settings.gradle.kts
others/cppchecktool/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
others/cppchecktool/include/backend/: backend.h
others/cppchecktool/include/core/: config.h  driver.h  filesystem_compat.h  issue.h  scan_options.h  source_file.h
others/cppchecktool/include/report/: report_writer.h
others/cppchecktool/include/rules/: rule.h
others/cppchecktool/src/: main.cpp
others/cppchecktool/src/backend/: builtin_backend.cpp  cppcheck_backend.cpp
others/cppchecktool/src/core/: config.cpp  driver.cpp
others/cppchecktool/src/report/: report_writer.cpp
others/cppchecktool/src/rules/: builtin_rules.cpp
others/cppchecktool/tests/samples/: clean.cpp  compile_commands.json  risky.cpp  tool.yml
skill/SANA/: README.md
skill/refactor/: AGENTS.md  CLAUDE.md  README.md
st/stcompare/: .gitignore  README.md  requirements.txt
stocktool/comparetool/: ComparetoolWpf.sln  README.md  publish.ps1
toos/: extract-ts.ps1
toos/compare/: compare-files.ps1
web/: .gitignore
web/DicomDvhTestTool/: config.json  index.html  package-lock.json  package.json  readme.md  server.js
(+1171 files in other folders)
